--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="passport photo.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1>logabhavani.k</h1>
+            <img src=".jpg" alt="Your Profile Picture" class="profile-picture">
+            <h1> vinothini R</h1></h1>
             <p>Am computer science student</p>
         </div>
     </header>
@@ -170,7 +170,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 logabhavani.k</p>
+        <p>&copy; 2025 vinothini R</p>
     </footer>
 
     <script>
