--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src=".jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="IMG20250319124820.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1> vinothini R</h1></h1>
             <p>Am computer science student</p>
         </div>
